@@ -1,5 +1,5 @@
 name="lacaml"
-version="4.7.5"
+version="4.7.6"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
